# SampleProject

./: .coverage  pyproject.toml
claims_ml/: pyproject.toml
frigg_ml/src/data_loader/: data_loader.py
tests/: conftest.py
tests/data_loader/: test_data_loader.py
tests/test_datasets/: test.csv  test.parquet
