[project]
name = "frigg-ml"
version = "0.0.0a1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytest-cov>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

# pytest configuration
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
